--- a/error_log.ipynb
+++ b/error_log.ipynb
@@ -16,14 +16,22 @@
     "Observation:\n",
     "- The robot successfully drove over the middle barrier without much difficulty\n",
     "\n",
-    "Aug 13:\n",
+    "Aug 13th:\n",
     "Observation:\n",
     "- The robot drivetrain max motor hits 600 rpm, but when on ground with 18 pounds on it, it only goes max 450 rpm. This translates to wheels 450 rpm in the air, and 338 rpm on the ground, which was already fast enough.\n",
     "Solution:\n",
     "- Next iteration, build a 360 rpm drive train, more torque and enough speed\n",
     "\n",
     "Decision:\n",
-    "- Remove the side tracking wheel, because we have 4 tracktion wheels, so it shouldn't be necessary"
+    "- Remove the side tracking wheel, because we have 4 tracktion wheels, so it shouldn't be necessary\n",
+    "\n",
+    "Aug 15th:\n",
+    "Observation:\n",
+    "The air is leeking!\n",
+    "Solution:\n",
+    "Check every failure point and connection.\n",
+    "1. Make sure the gold knobs on the piston are tight!\n",
+    "2. Make sure don't crease the tubing, bad things happen if"
    ]
   }
  ],
